--- a/Brainstorm Ellen Pil.html
+++ b/Brainstorm Ellen Pil.html
@@ -66,7 +66,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top html web page generator</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-4x" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline web maker</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-4x" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 90px;">
 
     
     <div class="container">
