--- a/Neutraal.html
+++ b/Neutraal.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg web site creator software download</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-2e" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline website design software download</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-2e" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
