--- a/Ons team.html
+++ b/Ons team.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web site generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1i" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header2-1i" style="background-color: rgb(239, 239, 239);">
 
     
 
